--- a/bot/admin/web/src/app/shared/components/chat-ui/chat-ui-message/chat-ui-message-debug/chat-ui-message-debug.component.html
+++ b/bot/admin/web/src/app/shared/components/chat-ui/chat-ui-message/chat-ui-message-debug/chat-ui-message-debug.component.html
@@ -1,6 +1,7 @@
 <div
   (click)="showDebug()"
   class="debug"
+  nbTooltip="Click to display debug infos"
 >
   <div class="head">DEBUG :</div>
   <div class="body">
