--- a/bot/admin/web/src/app/shared/components/chat-ui/chat-ui-message/chat-ui-message.component.html
+++ b/bot/admin/web/src/app/shared/components/chat-ui/chat-ui-message/chat-ui-message.component.html
@@ -1,6 +1,6 @@
 <div
   class="wrapper"
-  *ngIf="!message.isDebug()"
+  *ngIf="!message.isDebug() && !isMessageEmpty()"
 >
   <div
     class="avatar"
