--- a/bot/admin/web/src/app/shared/components/sentence-training/sentence-training-entry/sentence-training-entry.component.html
+++ b/bot/admin/web/src/app/shared/components/sentence-training/sentence-training-entry/sentence-training-entry.component.html
@@ -203,7 +203,7 @@
           <nb-icon icon="question-mark-circle-outline"></nb-icon>
         </button>
 
-        <!-- <button
+        <button
           *ngIf="sentenceTrainingMode !== SentenceTrainingMode.RAGEXCLUDED"
           nbButton
           nbTooltip="Exclude from Rag handling"
@@ -217,7 +217,7 @@
             icon="ragexclude"
             pack="tock-custom"
           ></nb-icon>
-        </button> -->
+        </button>
 
         <button
           nbButton
