--- a/bot/admin/web/src/app/test/dialog/bot-dialog.component.html
+++ b/bot/admin/web/src/app/test/dialog/bot-dialog.component.html
@@ -46,6 +46,7 @@
           nbTooltip="Get debug infos"
           labelPosition="start"
           [(ngModel)]="debug"
+          class="nb-toggle-reset-label-margin"
           >Debug</nb-toggle
         >
       </div>
