--- a/bot/admin/web/src/app/analytics/satisfaction/activate-satisfaction/activate-satisfaction.component.html
+++ b/bot/admin/web/src/app/analytics/satisfaction/activate-satisfaction/activate-satisfaction.component.html
@@ -1,17 +1,27 @@
-<nb-card class="stats" [nbSpinner]="loading">
+<div class="d-flex flex-wrap align-items-center mt-3">
+  <h1 class="flex-grow-1">Satisfaction</h1>
+</div>
+
+<nb-card
+  class="stats"
+  [nbSpinner]="loading"
+>
   <nb-card-header>
-  <h2>Activation of the Satisfaction Module</h2>
+    <h2>Activation of the Satisfaction Module</h2>
   </nb-card-header>
   <nb-card-body>
-  <p>
-    If you click on the button bellow, 4 stories will be created and you can start to test
-    by asking "Rate your experience" for your bot.
-  <p>
-  <p>
-    The evaluated dialogs will be then displayed in this tab.
-  </p>
+    <p>
+      If you click on the button bellow, 4 stories will be created and you can start to test by asking "Rate your experience" for your bot.
+    </p>
 
-  <button nbButton (click)="activate()">Activate the users satisfaction module</button>
+    <p></p>
+    <p>The evaluated dialogs will be then displayed in this tab.</p>
+
+    <button
+      nbButton
+      (click)="activate()"
+    >
+      Activate the users satisfaction module
+    </button>
   </nb-card-body>
 </nb-card>
-
