Fix Bug 1 and Bug 3 (#352)

--- a/bot/admin/web/src/app/rag/rag-settings/rag-settings.component.html
+++ b/bot/admin/web/src/app/rag/rag-settings/rag-settings.component.html
@@ -244,8 +244,9 @@
         <nb-option
           *ngFor="let option of filteredStories$ | async"
           [value]="option.storyId"
+          [disabled]="!isStoryEnabled(option)"
         >
-          {{ option.name }}
+          {{ option.name }} <span *ngIf="!isStoryEnabled(option)"> &nbsp;(disabled)</span>
         </nb-option>
       </nb-autocomplete>
     </nb-card-body>
