[DERCBOT-1003] Rag and custom metrics (#356)

--- a/bot/admin/web/src/app/metrics/indicators/indicators.component.html
+++ b/bot/admin/web/src/app/metrics/indicators/indicators.component.html
@@ -80,7 +80,10 @@
               <li *ngFor="let value of indicator.values">{{ value.label }}</li>
             </ul>
 
-            <div class="d-flex flex-wrap align-items-center justify-content-between">
+            <div
+              *ngIf="indicatorIsNotPredefined(indicator)"
+              class="d-flex flex-wrap align-items-center justify-content-between"
+            >
               <button
                 nbButton
                 ghost
