--- a/bot/admin/web/src/app/metrics/metrics-board/metrics-board.component.html
+++ b/bot/admin/web/src/app/metrics/metrics-board/metrics-board.component.html
@@ -240,6 +240,7 @@
                 </div>
                 <div class="col-4 text-right">
                   <button
+                    *ngIf="chart.indicatorName !== 'rag'"
                     nbButton
                     ghost
                     size="tiny"
