Sources with content on test view (#357)

--- a/bot/admin/web/src/app/shared/components/chat-ui/chat-ui-message/chat-ui-message-sentence-footnotes/chat-ui-message-sentence-footnotes.component.html
+++ b/bot/admin/web/src/app/shared/components/chat-ui/chat-ui-message/chat-ui-message-sentence-footnotes/chat-ui-message-sentence-footnotes.component.html
@@ -27,7 +27,13 @@
       {{ footNote.title }}
     </span>
     <span
-      *ngIf="!last"
+      *ngIf="footNote.content"
+      class="d-block"
+    >
+      {{ footNote.content }}
+    </span>
+    <span
+      *ngIf="!footNote.content && !last"
       class="mx-1"
       >|</span
     >
