--- a/bot/admin/web/src/app/test/dialog/bot-dialog.component.html
+++ b/bot/admin/web/src/app/test/dialog/bot-dialog.component.html
@@ -49,6 +49,13 @@
           class="nb-toggle-reset-label-margin"
           >Debug</nb-toggle
         >
+        <nb-toggle
+          nbTooltip="Get text content of RAG sources"
+          labelPosition="start"
+          [(ngModel)]="sourceWithContent"
+          class="nb-toggle-reset-label-margin"
+          >Sources content</nb-toggle
+        >
       </div>
     </div>
   </nb-card-header>
