--- a/bot/admin/web/src/app/bot/story/create-story/create-story.component.html
+++ b/bot/admin/web/src/app/bot/story/create-story/create-story.component.html
@@ -14,7 +14,7 @@
   ~ limitations under the License.
   -->
 
-<h1 class="mt-3">New story</h1>
+<h1>New story</h1>
 
 <nb-card class="sentence mt-2">
   <nb-card-body>
