--- a/bot/admin/web/src/app/bot/story/search-story/search-story.component.html
+++ b/bot/admin/web/src/app/bot/story/search-story/search-story.component.html
@@ -14,7 +14,7 @@
   ~ limitations under the License.
   -->
 
-<h1 class="mt-3">Stories</h1>
+<h1>Stories</h1>
 
 <div
   class="loading-spinner-wrapper mt-2"
