--- a/bot/admin/web/src/app/model-quality/log-stats/log-stats.component.html
+++ b/bot/admin/web/src/app/model-quality/log-stats/log-stats.component.html
@@ -14,7 +14,7 @@
   ~ limitations under the License.
   -->
 
-<h1 class="mt-3">Model stats</h1>
+<h1>Model stats</h1>
 
 <nb-card class="mb-2">
   <nb-card-body class="d-flex gap-1 align-items-end">
