--- a/bot/admin/web/src/app/theme/components/header/header.component.scss
+++ b/bot/admin/web/src/app/theme/components/header/header.component.scss
@@ -73,10 +73,10 @@
 
     .logo {
       cursor: pointer;
-      padding: 0 1.25rem;
+      padding: 0;
       font-size: 1.75rem;
-      @include nb-ltr(border-left, 1px solid nb-theme(divider-color));
-      @include nb-rtl(border-right, 1px solid nb-theme(divider-color));
+      // @include nb-ltr(border-left, 1px solid nb-theme(divider-color));
+      // @include nb-rtl(border-right, 1px solid nb-theme(divider-color));
       white-space: nowrap;
       text-decoration: none;
     }
