--- a/nlp/admin/web/src/app/applications/configuration-tabs.component.html
+++ b/nlp/admin/web/src/app/applications/configuration-tabs.component.html
@@ -14,4 +14,4 @@
   ~ limitations under the License.
   -->
 
-<nb-route-tabset [tabs]="configurationTabLinks"></nb-route-tabset>
+<nb-route-tabset></nb-route-tabset>
