--- a/nlp/admin/web/src/app/entities/entities.component.html
+++ b/nlp/admin/web/src/app/entities/entities.component.html
@@ -14,7 +14,7 @@
   ~ limitations under the License.
   -->
 
-<h1 class="mt-3">Entities</h1>
+<h1>Entities</h1>
 
 <nb-card>
   <nb-card-header>Entity types</nb-card-header>
