--- a/nlp/admin/web/src/app/intents/intents.component.html
+++ b/nlp/admin/web/src/app/intents/intents.component.html
@@ -14,7 +14,7 @@
   ~ limitations under the License.
   -->
 
-<h1 class="mt-3">Intents</h1>
+<h1>Intents</h1>
 
 <tock-intents-filters (onFilter)="filterIntents($event)"></tock-intents-filters>
 
