--- a/nlp/admin/web/src/app/quality-nlp/quality-tabs.component.html
+++ b/nlp/admin/web/src/app/quality-nlp/quality-tabs.component.html
@@ -14,7 +14,4 @@
   ~ limitations under the License.
   -->
 
-<nb-route-tabset
-  [tabs]="tabLinks"
-  fullWidth
-></nb-route-tabset>
+<nb-route-tabset fullWidth></nb-route-tabset>
