--- a/bot/admin/web/src/app/analytics/satisfaction/satisfaction-details/satisfaction-details.component.html
+++ b/bot/admin/web/src/app/analytics/satisfaction/satisfaction-details/satisfaction-details.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex flex-wrap align-items-center mt-3">
+<div class="d-flex flex-wrap align-items-center">
   <h1 class="flex-grow-1">
     Satisfaction
     <span
