--- a/bot/admin/web/src/app/bot/story/documents-story/documents-story.component.html
+++ b/bot/admin/web/src/app/bot/story/documents-story/documents-story.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex flex-wrap mt-3">
+<div class="d-flex flex-wrap">
   <h1 class="flex-grow-1">Documents</h1>
 
   <section class="d-flex flex-wrap align-items-center">
