--- a/bot/admin/web/src/app/configuration/bot-configurations/bot-configurations.component.html
+++ b/bot/admin/web/src/app/configuration/bot-configurations/bot-configurations.component.html
@@ -14,7 +14,7 @@
   ~ limitations under the License.
   -->
 
-<div class="d-flex flex-wrap mt-3 mb-2">
+<div class="d-flex flex-wrap mb-2">
   <h1 class="flex-grow-1">Bot configurations</h1>
 
   <section
