--- a/bot/admin/web/src/app/language-understanding/intents-logs/intents-logs.component.html
+++ b/bot/admin/web/src/app/language-understanding/intents-logs/intents-logs.component.html
@@ -14,7 +14,7 @@
   ~ limitations under the License.
   -->
 
-<div class="d-flex flex-wrap mt-3">
+<div class="d-flex flex-wrap">
   <h1 class="flex-grow-1">
     Logs
     <span
