--- a/bot/admin/web/src/app/language-understanding/sentences/sentence-new/sentence-new.component.html
+++ b/bot/admin/web/src/app/language-understanding/sentences/sentence-new/sentence-new.component.html
@@ -14,7 +14,7 @@
   ~ limitations under the License.
   -->
 
-<h1 class="mt-3">New sentence</h1>
+<h1>New sentence</h1>
 
 <nb-card>
   <nb-card-body>
