--- a/bot/admin/web/src/app/language-understanding/sentences/sentences-search/sentences-search.component.html
+++ b/bot/admin/web/src/app/language-understanding/sentences/sentences-search/sentences-search.component.html
@@ -14,7 +14,7 @@
   ~ limitations under the License.
   -->
 
-<div class="d-flex flex-wrap mt-3">
+<div class="d-flex flex-wrap">
   <h1 class="flex-grow-1">Search sentences</h1>
 
   <section class="d-flex flex-wrap align-items-center">
