--- a/bot/admin/web/src/app/language-understanding/sentences/sentences-unknown/sentences-unknown.component.html
+++ b/bot/admin/web/src/app/language-understanding/sentences/sentences-unknown/sentences-unknown.component.html
@@ -14,5 +14,5 @@
   ~ limitations under the License.
   -->
 
-<h1 class="mt-3">Unknown sentences</h1>
+<h1>Unknown sentences</h1>
 <tock-sentence-training [sentenceTrainingMode]="mode"></tock-sentence-training>
