--- a/bot/admin/web/src/app/rag/rag-excluded/rag-excluded.component.html
+++ b/bot/admin/web/src/app/rag/rag-excluded/rag-excluded.component.html
@@ -14,6 +14,6 @@
   ~ limitations under the License.
   -->
 
-<h1 class="mt-3">Rag exclusions</h1>
+<h1>Rag exclusions</h1>
 
 <tock-sentence-training [sentenceTrainingMode]="mode"></tock-sentence-training>
