--- a/nlp/admin/web/src/app/applications/application/application.component.html
+++ b/nlp/admin/web/src/app/applications/application/application.component.html
@@ -13,7 +13,7 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<div class="d-flex flex-wrap mt-3 mb-2">
+<div class="d-flex flex-wrap mb-2">
   <h1 class="flex-grow-1">
     <span *ngIf="applications.length !== 0"
       >Application
