--- a/nlp/admin/web/src/app/applications/applications/applications.component.html
+++ b/nlp/admin/web/src/app/applications/applications/applications.component.html
@@ -14,7 +14,7 @@
   ~ limitations under the License.
   -->
 
-<div class="d-flex flex-wrap mt-3 mb-2">
+<div class="d-flex flex-wrap mb-2">
   <div
     class="flex-grow-1"
     *ngIf="state.applications.length === 0"
