--- a/nlp/admin/web/src/app/nlp-tabs/nlp-tabs.component.html
+++ b/nlp/admin/web/src/app/nlp-tabs/nlp-tabs.component.html
@@ -13,4 +13,4 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<nb-route-tabset [tabs]="tabLinks"></nb-route-tabset>
+<nb-route-tabset></nb-route-tabset>
