dercbot-1065-1073-Filter rag dialogs and create faq from rag answer

--- a/bot/admin/web/src/app/faq/faq-management/faq-management-list/faq-management-list.component.html
+++ b/bot/admin/web/src/app/faq/faq-management/faq-management-list/faq-management-list.component.html
@@ -34,6 +34,15 @@
               First question (out of {{ faq.utterances.length }})
             </small>
             {{ faq.utterances[0] }}
+            <button
+              nbButton
+              ghost
+              size="tiny"
+              nbTooltip="Copy question"
+              (click)="copyString(faq.utterances[0])"
+            >
+              <nb-icon icon="copy-outline"></nb-icon>
+            </button>
           </div>
         </div>
 
