--- a/bot/admin/web/src/app/theme/styles/utilities.scss
+++ b/bot/admin/web/src/app/theme/styles/utilities.scss
@@ -189,3 +189,19 @@ nb-menu {
     }
   }
 }
+
+.min-width-5 {
+  min-width: 5em;
+}
+
+.min-width-10 {
+  min-width: 10em;
+}
+
+.min-width-15 {
+  min-width: 15em;
+}
+
+.min-width-20 {
+  min-width: 20em;
+}
